--- a/curs1/ap5_tema.html
+++ b/curs1/ap5_tema.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-
+            
         </nav>
     </header>
     <main>
@@ -19,13 +19,21 @@
         </nav>
     </main>
     <main>
-        <header>
-            <article>
-        <header>
+        <header></header>
+        <article>
+            <header></header>
+            <div></div>
+            <aside></aside>
+            <footer></footer>
+        </article>
 
-        </header>
-            </article>
-        </header>
+        <article>
+            <header></header>
+            <div></div>
+            <footer></footer>
+        </article>
+        <footer></footer>
     </main>
+    <footer></footer>
 </body>
 </html>
