--- a/curs1/ap7_tema.html
+++ b/curs1/ap7_tema.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="Aplicatie curs 2">
+    <meta name="keywords" content="curs2, linbk-academy">
+    <meta name="author" content="Bogdan Marius">
 </head>
 <body>
     <h1><strong>Cuvinte importante</strong></h1>
@@ -17,6 +20,6 @@
     <h2><span>grupeaza elementele inline</span></h2>
     <hr>    <!--adauga o linie-->
     <p>Sa intelegem<br> br</p>    <!-- <br> break si scrie continuarea textului mai jos-->
-    <p>Sa intelegemmm<wbr>mmmmm</p>  <!--nu inteleg <wbr> intreaba profesorul-->
+    <p>Sa intelegemmm<wbr>tttttttttttttttttmmmmm</p>  <!--nu inteleg <wbr> intreaba profesorul-->
 </body>
 </html>
