--- a/curs3/ap1.html
+++ b/curs3/ap1.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h2 {
+            color: green;
+        }
+    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <h1 style="color: red; font-size: 40px;">Primul titlu cu HTM si CSS</h1>
+    <h2>Subtitlu</h2>
+    <h2 style="color: #dedede;">Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae voluptatem nulla deserunt consectetur? Exercitationem rem, dolores consectetur cumque velit adipisci quo enim earum provident ullam veniam, quod doloribus, sunt reprehenderit.</p>
+    <p>Perspiciatis eaque error, voluptas officia provident, ex magni laudantium quasi quos, modi quo facilis. Veniam, labore magnam. Quidem excepturi recusandae provident laborum, eligendi neque dolor temporibus perferendis eos amet quia.</p>
+    <p>Consequuntur quia officiis beatae nobis sapiente quas at neque quibusdam cum temporibus! Itaque, est iusto asperiores veniam cum modi quaerat, quae ducimus quia inventore culpa dolorem earum! Quasi, doloribus expedita.</p>
+    <p>Totam optio recusandae officiis impedit sit. Dolor vero necessitatibus laudantium incidunt earum magni eveniet nemo est, obcaecati ipsum, velit delectus ipsam facilis unde, debitis fugiat illo assumenda repudiandae molestias nesciunt.</p>
+    <p>Delectus necessitatibus nulla suscipit impedit, qui similique adipisci nemo tenetur amet molestiae? Earum, cupiditate asperiores id sequi ea deserunt quia veritatis est explicabo officiis! Quos aspernatur quas rerum repellendus sint!</p>
 </body>
 </html>
