--- a/proiect/contact.html
+++ b/proiect/contact.html
@@ -37,9 +37,9 @@
             <ul>
                 <li><a href="./acasa.html">Acasa</a></li>
                 <li><a href="./portofoliu.html">Portofoliu</a></li>
-                <li class="active"><a href="./blog.html">Blog</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./despre_mine.html">Despre mine</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li class="active"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -47,63 +47,13 @@
         <main id="main">
             <!-- Section A -->
             <section id="section-a" class="grid">
-                <table>
-                    <tr>
-                        <th>Nr</th>
-                        <th>Nume</th>
-                        <th>Prenume</th>
-                        <th>Telefon</th>
-                        <th>Varsta</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
             </section>
 
             <!-- Section B -->
             <section id="section-b" class="grid">
                 <ul>
                     <li>
+                        <strong>Email:</strong> <a href="mailto: mariuss.b094@gmail.com">mariuss.b094@gmail.com</a>
                     </li>
                     <li>
                     </li>
