--- a/proiect/portofoliu.html
+++ b/proiect/portofoliu.html
@@ -20,6 +20,10 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <title>CSS Grid Site</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -34,8 +38,8 @@
                 <li><a href="./acasa.html">Acasa</a></li>
                 <li class="active"><a href="./portofoliu.html">Portofoliu</a></li>
                 <li><a href="./blog.html">Blog</a></li>
-                <li><a href="">Despre mine</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="./despre_mine.html">Despre mine</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
