--- a/proiect/acasa.html
+++ b/proiect/acasa.html
@@ -19,6 +19,10 @@
         <link rel="mask-icon" href="./assets/images/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100&display=swap" rel="stylesheet">
         <title>CSS Grid Site</title>
     </head>
 
@@ -34,8 +38,8 @@
                 <li class="active"><a href="./acasa.html">Acasa</a></li>
                 <li><a href="./portofoliu.html">Portofoliu</a></li>
                 <li><a href="./blog.html">Blog</a></li>
-                <li><a href="">Despre mine</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="./despre_mine.html">Despre mine</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
 
