--- a/proiect/contact.html
+++ b/proiect/contact.html
@@ -43,6 +43,65 @@
             </ul>
         </nav>
 
+        <h1>Formular de comanda</h1>
+
+    <form action="" method="post">
+        <fieldset>
+            <legend>Card</legend>
+            <div>
+                <label for="card">Numar card</label>
+                <input type="text" name="card" id="card" maxlength="16" minlength="16" required>
+            </div>
+
+            <div>
+                <label for="data">Data expirare</label>
+                <input type="date" name="data_expirare" id="data">
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>Livrare</legend>
+            <div>
+                <label for="nume">Nume</label>
+                <input type="text" name="nume" id="nume" value="" required minlength="3">
+            </div>
+            <div>
+                <label for="prenume">Prenume</label>
+                <input type="text" name="prenume" id="prenume" value="" required minlength="3">
+            </div>
+            <div>
+                <label for="adresa">Adresa</label>
+                <input type="text" name="adresa" id="adresa" value="" required minlength="3">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" value="" required>
+            </div>
+            <div>
+                <label for="telefon">Telefon</label>
+                <input type="tel" name="telefon" id="telefon" value="" required minlength="10" maxlength="10">
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>Alege produsul</legend>
+            <div>
+                <label for="masina">Masina</label>
+                <select name="masina" id="masina">
+                    <option value="Volvo">Volvo</option>
+                    <option value="BMW">BMW</option>
+                    <option value="Ford">Ford</option>
+                    <option value="Dacia">Dacia</option>
+                </select>
+            </div>
+            <div>
+                <label for="mesaj">Mesaj</label>
+                <textarea name="mesaj" id="mesaj" cols="30" rows="10"></textarea>
+            </div>
+        </fieldset>
+        <button type="submit">Trimite datele</button>
+    </form>
+
         <!-- Main Area -->
         <main id="main">
             <!-- Section A -->
