--- a/proiect/contact.html
+++ b/proiect/contact.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/contact.css">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,14 +40,22 @@
                 <li><a href="./portofoliu.html">Portofoliu</a></li>
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./despre_mine.html">Despre mine</a></li>
-                <li class="active"><a href="./contact.html">Contact</a></li>
+                <li class="active">
+                    <a href="./contact.html">Contact</a>
+                    <ul>
+                        <li>Despre buget</li>
+                        <li>Despre echipa</li>
+                        <li>Despre proiecte</li>
+                    </ul>
+                    
+                </li>
             </ul>
         </nav>
 
         <h1>Formular de comanda</h1>
 
     <form action="" method="post">
-        <fieldset>
+        <fieldset id="card">
             <legend>Card</legend>
             <div>
                 <label for="card">Numar card</label>
