--- a/proiect/contact.html
+++ b/proiect/contact.html
@@ -4,8 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="./assets/css/contact.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,9 +44,9 @@
                 <li class="active">
                     <a href="./contact.html">Contact</a>
                     <ul>
-                        <li>Despre buget</li>
-                        <li>Despre echipa</li>
-                        <li>Despre proiecte</li>
+                        <li><a href="">Despre echipa</a></li>
+                        <li><a href="">Despre sediu</a></li>
+                        <li><a href="">despte buget</a></li>
                     </ul>
                     
                 </li>
